# elastinga

./: pyproject.toml
docker/development/: Dockerfile  docker-compose.yml
elastinga/: __init__.py  _logging.py  analyzers.py  connection.py  crud.py  exc.py  schemas.py  settings.py
tests/: test_elastinga.py
